--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 # Configuración SGBD
 #
 DATABASE_HOST    = '127.0.0.1'
-DATABASE_NAME    = 'db_name'                    # CHANGE!!!
+DATABASE_NAME    = 'miw_results'
 DATABASE_PORT    = 3306
-DATABASE_USER    = 'root'                       # CHANGE!!!
-DATABASE_PASSWD  = ''                           # CHANGE!!!
+DATABASE_USER    = 'miw'
+DATABASE_PASSWD  = '*miw*'
 DATABASE_DRIVER  = 'pdo_mysql'
 DATABASE_CHARSET = 'UTF8'
 
