web part started

--- a/.env
+++ b/.env
@@ -19,3 +19,9 @@ ADMIN_USER_PASSWD = '-+-${ADMIN_USER_NAME}-+-'  # CHANGE!!!
 #
 ENTITY_DIR       = "./src/Entity/"
 DEBUG            = 0    # muestra consulta SQL por la salida estándar
+
+
+# Enrutamiento
+CONFIG_DIR = './config'
+
+ROUTES_FILE = 'rutas.yml'
