--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,10 @@
         "ext-mysqli": "*",
         "ext-json": "*",
         "doctrine/orm": "^2.6",
-        "vlucas/phpdotenv": "^3.6"
+        "vlucas/phpdotenv": "^3.6",
+        "symfony/routing": "4.3.*",
+        "symfony/yaml": "4.3.*",
+        "symfony/config": "4.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
