index.php works more or less

--- a/.env
+++ b/.env
@@ -20,8 +20,11 @@ ADMIN_USER_PASSWD = '-+-${ADMIN_USER_NAME}-+-'  # CHANGE!!!
 ENTITY_DIR       = "./src/Entity/"
 DEBUG            = 0    # muestra consulta SQL por la salida estándar
 
-
-# Enrutamiento
+#
+# Configuración Enrutamiento
+#
+# Directorios que contienen la definición de las rutas
 CONFIG_DIR = './config'
 
+# Nombre del fichero con las rutas
 ROUTES_FILE = 'rutas.yml'
