working on new user form

--- a/config/rutas.yml
+++ b/config/rutas.yml
@@ -10,3 +10,8 @@ ruta_user_list:
   controller: 'funcionListadoUsers'
   methods:
     - GET
+
+ruta_user_nuevo:
+  path:       /user/new
+  controller: 'funcionNuevoUser'
+  methods:   [ GET, POST ]
