--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,15 @@
 		"php": ">=7.2",
         "ext-mysqli": "*",
         "ext-json": "*",
-        "doctrine/orm": "^2.6",
+        "doctrine/orm": "^2.7",
         "vlucas/phpdotenv": "^3.6",
         "symfony/routing": "4.3.*",
         "symfony/yaml": "4.3.*",
         "symfony/config": "4.3.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "phpunit/phpunit": "^8.4"
     },
     "config": {
         "bin-dir": "bin"
