--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,17 +13,17 @@
 
         <!-- ###+ ResultsDoctrine -->
             <env name="DATABASE_HOST" value="127.0.0.1"/>
-            <env name="DATABASE_NAME" value="miw_results_tests"/>
+            <env name="DATABASE_NAME" value="miw_results"/>
             <env name="DATABASE_PORT" value="3306"/>
-            <env name="DATABASE_USER" value="DATABASE_USER"/>      <!-- CHANGE!!! -->
-            <env name="DATABASE_PASSWD" value="DATABASE_PASSWD"/>  <!-- CHANGE!!! -->
+            <env name="DATABASE_USER" value="miw"/>      <!-- CHANGE!!! -->
+            <env name="DATABASE_PASSWD" value="*miw*"/>  <!-- CHANGE!!! -->
             <env name="DATABASE_DRIVER" value="pdo_mysql"/>
             <env name="DATABASE_CHARSET" value="UTF8"/>
 
             <!-- User ADMIN username/password -->
-            <env name="ADMIN_USER_NAME" value="u18"/>              <!-- CHANGE!!! -->
-            <env name="ADMIN_USER_EMAIL" value="admin-miw@example.com"/>
-            <env name="ADMIN_USER_PASSWD" value="*u18*"/>          <!-- CHANGE!!! -->
+            <env name="ADMIN_USER_NAME" value="adminUser"/>              <!-- CHANGE!!! -->
+            <env name="ADMIN_USER_EMAIL" value="adminUser@example.com"/>
+            <env name="ADMIN_USER_PASSWD" value="-+-adminUser-+-"/>          <!-- CHANGE!!! -->
 
             <env name="ENTITY_DIR" value="./src/Entity/"/>
             <!-- muestra consulta SQL por la salida estándar-->
